// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/switch/demo/basic.md correctly 1`] = `
<span
  class="ant-switch ant-switch-checked"
  tabindex="0"
>
  <span
    class="ant-switch-inner"
  />
</span>
`;

exports[`renders ./components/switch/demo/disabled.md correctly 1`] = `
<div>
  <span
    class="ant-switch ant-switch-checked ant-switch-disabled"
    tabindex="-1"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
  <br />
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Toggle disabled
    </span>
  </button>
</div>
`;

exports[`renders ./components/switch/demo/loading.md correctly 1`] = `
<div>
  <span
    class="ant-switch-loading ant-switch ant-switch-checked"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
  <br />
  <span
    class="ant-switch-small ant-switch-loading ant-switch"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
</div>
`;

exports[`renders ./components/switch/demo/size.md correctly 1`] = `
<div>
  <span
    class="ant-switch ant-switch-checked"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
  <br />
  <span
    class="ant-switch-small ant-switch ant-switch-checked"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
</div>
`;

exports[`renders ./components/switch/demo/text.md correctly 1`] = `
<div>
  <span
    class="ant-switch ant-switch-checked"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    >
      开
    </span>
  </span>
  <br />
  <span
    class="ant-switch"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    >
      0
    </span>
  </span>
  <br />
  <span
    class="ant-switch ant-switch-checked"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    >
      <svg
        aria-hidden="true"
        class="anticon"
        data-icon="check"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474c-6.1-7.7-15.3-12.2-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
        />
      </svg>
    </span>
  </span>
</div>
`;
